# BigDataWork

./: .gitignore  README.md
bigwork/: SimRank.ipynb  SimRank.pptx  Untitled.ipynb  simRank.docx  test
bigwork/SimRank/: CMakeLists.txt  CSimRank.h  NaiveSimRank.cc  PageRankVertex.cc  SimRank.cc  kill_graphlite.sh  main.cpp  setenv
bigwork/SimRank/Input/: facebookcombined_reverse  facebookcombined_reverse_4w_1  facebookcombined_reverse_4w_2  facebookcombined_reverse_4w_3  facebookcombined_reverse_4w_4  testgraph  testgraph_reverse  testgraph_reverse_4w_1  testgraph_reverse_4w_2  testgraph_reverse_4w_3  testgraph_reverse_4w_4
hw1/: 作业1环境外迁1.md  作业1环境外迁2.md
hw1/java_hdfs/: README.txt
hw1/java_hdfs/src/: HDFSTest.java  Hw1Grp0.java  Hw1GrpX.java  Hw1GrpX_v2.java
hw2/: part2_code_try.ipynb
hw2/GraphLite-0.20/WorkerOut/: worker1.out  worker2.out  worker3.out  worker4.out
hw2/cpp_GraphLite/: CMakeLists.txt  PageRankVertex.cc  SSSP.cc  main.cpp  setenv  temp.cc
hw2/cpp_GraphLite/Output/: out_1  out_2  out_3  out_4
hw2/java_map_reduce/src/: Hw2Part1.java
